# nedbygging-project

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: config.yaml
configs/data/: default.yaml
configs/paths/: default.yaml
configs/training/: default.yaml
notebooks/: look-at-img-dataloader.ipynb  plot_ious.ipynb  test_pipeline.ipynb
src/: app.py  main.py  model.py  predict.py  predict_val_imgs.py  test.ipynb  trainer.py  utils.py
src/dataset/: augmentations.py  get_minmax.py  monthlysampler.py  normalizers.py  visualisation.py
