[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[project]
authors = [
  {name = "ninanor", email = "taheera.ahmed@nina.no"}
]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
  "django-environ"
]
description = ""
license = {text = "GPL-3.0+"}
name = "nedbygging_project"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.optional-dependencies]
tools = [
  "pre-commit",
  "pyyaml",
  "GitPython"
]

[project.scripts]
"nedbygging_project_start" = "main:start"

[tool.poetry]
authors = ["Taheera Ahmed <taheera.ahmed@nina.no>"]
description = ""
name = "nedbygging-project"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
ipykernel = "^6.29.5"
python = "^3.10"
rasterio = "^1.4.3"
rioxarray = "^0.18.2"
scikit-learn = "^1.6.1"
torchgeo = "^0.6.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = ["COM812"]
select = ["E", "W", "I", "F", "UP", "S", "B", "A", "COM", "LOG", "PTH", "Q"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501", "ANN"]
"nina-python-init.py" = ["S603", "S607"]
